using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace SoundLoop.Controller
{
	internal interface IReadable
	{
		public void Read(string fname);
	}
}
