namespace SoundLoop.Controller.NAudio
{
    internal interface IPauseable
    {
        void Pause();
        void Resume();
    }
}
