using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace SoundLoop.Models
{
	internal struct FormatsData
	{
		public const string MP4 = "mp4";
		public const string MP3 = "mp3";
		public const string WAV = "wav";
	}
}
